sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_BoardingSequence__c.field-meta.xml
<CustomField>
    <fullName>IRR_BoardingSequence__c</fullName>
    <label>Boarding Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>