sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_Icoupon_Amount__c.field-meta.xml
<CustomField>
    <fullName>IRR_Icoupon_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>