sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_Icoupon_Currency__c.field-meta.xml
<CustomField>
    <fullName>IRR_Icoupon_Currency__c</fullName>
    <label>Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>