sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_ServiceClass__c.field-meta.xml
<CustomField>
    <fullName>IRR_ServiceClass__c</fullName>
    <label>Service Class</label>
    <length>20</length>
    <type>Text</type>
</CustomField>